Added check if quoteAuthor not found

--- a/quote_machine/index.html
+++ b/quote_machine/index.html
@@ -15,7 +15,7 @@
         <h3>Welcome to my Random Quote Machine for Free Code Camp.</h3>
         <div class="well">
             <p id="quote"></p>
-            <p id="author"></p>
+            <h4 id="author"></h4>
         </div>
         <divs>
         <button type="button" class="btn btn-default center-block" aria-label="Left Align">Get Quote</button>
